--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
     "version": "0.1.0",
     "private": true,
     "devDependencies": {
+        "@wdio/allure-reporter": "^7.16.10",
         "@wdio/cli": "^7.16.10",
         "@wdio/cucumber-framework": "^7.16.6",
         "@wdio/local-runner": "^7.16.10",
         "@wdio/spec-reporter": "^7.16.9",
+        "allure-commandline": "^2.13.8",
         "chromedriver": "^96.0.0",
-        "msedgedriver": "^91.0.0",
         "cucumber-spec-generator": "^0.1.5",
+        "msedgedriver": "^91.0.0",
+        "selenium-webdriver": "^4.1.0",
         "ts-node": "^10.4.0",
         "typescript": "^4.5.2",
         "wdio-chromedriver-service": "^7.2.2",
@@ -19,6 +22,8 @@
         "wdio-safaridriver-service": "^0.0.1"
     },
     "scripts": {
-        "e2e": "wdio run wdio.conf.ts"
+        "test": "wdio run wdio.conf.ts",
+        "sauce": "wdio run wdio.conf.sauce.ts",
+        "allure-report": "node_modules/.bin/allure generate --clean ./.results/allure-results && allure open"
     }
 }
