--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,14 +21,11 @@ jobs:
             - node-deps-v1-{{ .Branch }}-{{checksum "package-lock.json"}}
       - run:
           name: install packages
-          command: npm ci && sudo apt-get update -y && ./install_chrome_binary.sh
+          command: npm ci 
       - save_cache:
           key: node-deps-v1-{{ .Branch }}-{{checksum "package-lock.json"}}
           paths:
             - ~/.npm
-      - run:
-          name: Run Tests
-          command: npm run test
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
