--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,9 @@ jobs:
           key: node-deps-v1-{{ .Branch }}-{{checksum "package-lock.json"}}
           paths:
             - ~/.npm
+      - run:
+          name: Run Tests
+          command: npm run test            
     parallelism: 4
 
 # Invoke jobs via workflows
